fix: Windows/Linux launch, updater version, background support
- Fix AppVersion set at build time via ldflags (fixes fake update on Windows)
- Fix Windows launch: direct executable call instead of cmd /c start
- Fix Linux launch: direct call with LD_LIBRARY_PATH
- Fix Java path for Windows/Linux (use jre/bin/java directly, no symlinks)
- Add platform-specific SysProcAttr (launch_windows.go, launch_unix.go)
- BackgroundImage now supports background.jpg image file
- Simplified fallback gradient animation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,12 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
       
       - name: Build
-        run: wails build -clean
+        run: |
+          VERSION="${GITHUB_REF#refs/tags/v}"
+          if [ -z "$VERSION" ] || [ "$VERSION" = "$GITHUB_REF" ]; then
+            VERSION="dev"
+          fi
+          wails build -clean -ldflags "-X 'HyPrism/app.AppVersion=$VERSION'"
       
       - name: Create DMG (macOS)
         if: matrix.platform == 'macos'
